config/samples/02-ref-configs/base/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: wso2-iam-system
  name: wso2is-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  tls:
    - hosts:
        - wso2is.com
  rules:
    - host: wso2is.com
      http:
        paths:
          - backend:
              service:
                name: wso2is-service
                port:
                  number: 9443
            path: /
            pathType: Prefix
